# orca

./: .gitignore  README.md  log2.txt  log3.txt  log5.txt  logan_ideas.txt  orca.cabal  proposal.md  stack.yaml  weightHistogram.xlsx
app/: LanguageApp.hs  Main.hs  ReaderApp.hs  Research.hs  Training.hs
app/concept/: cluster.hs  copyPng.hs  grey.hs
data/: report.txt
data/attempts/attempt0/: output_colorcluster_k10.txt  output_colorcluster_k5.txt
data/attempts/attempt1/: details
data/attempts/attempt_4f/: clusters1.txt  clusters4.txt  newalgorithm.txt
data/attempts/grey/: big.csv  big.xlsx  small.csv
old/: fSymbolData.csv  log.txt  log4.txt  orcalog.txt  out.docx  symbolData.xlsx  tests.md  weightHistogram.csv
old/data/attempts/adaptiveThreshold/: 10Threshold10Div.tiff  10Threshold20Div.tiff  fiveThreshold40Div.tiff  fiveThreshold50Div.tiff  fiveThreshold5Div.tiff  zeroThreshold.tiff
old/data/attempts/attempt0/: output_colorcluster2.txt
old/data/attempts/attempt_4f/: clusters2.txt  clusters3.txt  clusters5.txt
old/data/attempts/fun/: Sum.tiff  bizarro.tiff  bizarro2.tiff  bizarro3.tiff  threshold.tiff
old/data/attempts/grey/: 11_stats.txt  12_stats.txt  13_stats.txt  16_stats.txt  17_stats.txt  19_stats.txt  21_stats.txt  9_stats.txt  big.xlsx  small.xlsx
src/Orca/: App.hs  Helper.hs  Reader.hs  Testing.hs  Training.hs
src/Orca/Reader/: Classification.hs  Clustering.hs  Data.hs  Greyscale.hs  Layout.hs  PCA.hs  Processing.hs  Types.hs
src/Orca/Reader/Layout/: Grouping.hs  ParseSymbols.hs  Types.hs
src/main/: start.hs
