name:                orca
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/orca#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:  FlexibleContexts
  exposed-modules:     Lib
                     , Main.Start
                     , Orca.Reader.Clustering
                     , Orca.Reader.Processing
                     , Orca.Reader.Greyscale
                     , Orca.Reader.Layout
                     , Orca.Testing
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
                     , hip >= 1.5
                     , random
                     , containers
                     , vector
                     , directory
  default-language:    Haskell2010
executable grey
  hs-source-dirs:      app
  main-is:             concept/grey.hs
  default-extensions:  FlexibleContexts
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , orca
                     , hip >= 1.5
                     , vector
                     , random
  default-language:    Haskell2010


executable orca-concept
  hs-source-dirs:      app
  main-is:             concept/cluster.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , orca
                     , JuicyPixels
                     , random
  default-language:    Haskell2010

executable orca-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , orca
  default-language:    Haskell2010

test-suite orca-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , orca
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Testare/orca
