name:                orca
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/testare/orca#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-extensions:  FlexibleContexts
  exposed-modules:     Lib
                     , Orca.App
                     , Orca.Reader
                     , Orca.Reader.Data
                     , Orca.Reader.Processing
                     , Orca.Reader.Greyscale
                     , Orca.Reader.Layout
                     , Orca.Reader.Classification
                     , Orca.Reader.Types
                     , Orca.Reader.PCA
                     , Orca.Testing
                     , Orca.Training
                     , Orca.Helper
  other-modules:       Orca.Reader.Layout.ParseSymbols
                     , Orca.Reader.Layout.Grouping
  build-depends:       base >= 4.7 && < 5
                     , JuicyPixels
                     , hip >= 1.5
                     , random
                     , containers
                     , vector
                     , directory
                     , hmatrix >= 0.18 && < 0.19
                     , filepath == 1.4.1.1
  default-language:    Haskell2010

executable language-app
  hs-source-dirs:      app
  main-is:             LanguageApp.hs
  default-extensions:  FlexibleContexts
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , orca
                     , hip >= 1.5
                     , vector
                     , random
  default-language:    Haskell2010

executable reader-app
  hs-source-dirs:      app
  main-is:             ReaderApp.hs
  default-extensions:  FlexibleContexts
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , orca
                     , hip >= 1.5
                     , vector
                     , random
  default-language:    Haskell2010

executable r
  --research
  hs-source-dirs:      app
  main-is:             Research.hs
  default-extensions:  FlexibleContexts
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , orca
                     , hip >= 1.5
                     , vector
                     , random
  default-language:    Haskell2010

executable t 
  --training
  hs-source-dirs:      app
  main-is:             Training.hs
  default-extensions:  FlexibleContexts
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , orca
                     , hip >= 1.5
                     , vector
                     , random
  default-language:    Haskell2010

test-suite orca-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , orca
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Testare/orca
